# AdventOfCode2022

./: .gitignore  Cargo.toml
day01/: main.rs
day01/src/: main.rs
day02/: main.rs
day02/src/: main.rs
day03/: main.rs
day03/src/: main.rs
day04/: main.rs
day05/: main.rs
day06/: main.rs
