[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "day01"
path = "day01/main.rs"

[[example]]
name = "day02"
path = "day02/main.rs"
[[example]]
name = "day03"
path = "day03/main.rs"
[[example]]
name = "day04"
path = "day04/main.rs"
